# cortexllm

./: .env.example  .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  MEMORY_SYSTEM_CONFIG.md  PLATFORMS.md  README.md  ROADMAP.md  SETUP.md  TODO.md  USER-PREFERENCES.md  USER_STYLE.md  anti_hallucination.py  cold_distiller.py  cortexllm_db.py  cortexllm_mcp_server.py  cortexllm_models.py  gateway_client.py  go.mod  go.sum  heartbeat_service.py  install.sh  loop_guard.py  main.go  mcp-server-config.json  memory-tools.py  memory_hook.py  memory_manager.py  migrate-external-memory.py  migrate-openclaw-memory.py  migrate_to_sqlite.py  opencode_memory_hook.py  prepare-for-production.sh  profiles.py  pyproject.toml  reliability.py  save-all-sessions.py  session-heartbeat-skill.md  setup.py  (+3 more)
.github/workflows/: release.yml
.openclaw/github/: .gitignore  README.md
.openclaw/github/cortexllm/: README.md
config/: default.json
configs/: default.json
cortexllm/: README.md  __init__.py  heartbeat_service.py  memory_hook.py  memory_manager.py  model_router.py  opencode_memory_hook.py
cortexllm-tools/: cli-save-session.py
cortexllm/cli/: unified.py  watch.py
cortexllm/core/: AGENTS.md  brain.py  config.py  memory.py  orchestrator.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  QUICKSTART.md  TROUBLESHOOTING.md
production/cortexllm/: CORE_MEMORY.md  INSTALL-MEMORY-SYSTEM.md  anti_hallucination.py  install.sh  memory_hook.py  model_router.py
production/openclaw/: README.md  install.sh  openclaw.json.config
production/openclaw/workspace/: AGENTS.md  SOUL.md
proxy/: main.go
