[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexllm"
version = "2.0.0"
description = "Unified AI Control for Your Terminal - TUI for managing AI conversations with persistent memory and agent orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "greyok00", email = "github.com/greyok00" }
]
keywords = ["ai", "tui", "terminal", "ollama", "llm", "chat", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/greyok00/cortexllm"
Repository = "https://github.com/greyok00/cortexllm.git"
Issues = "https://github.com/greyok00/cortexllm/issues"

[tool.setuptools.packages.find]
include = ["cortexllm*"]
