[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexllm"
version = "0.2.0"
description = "Unified AI Control for Your Terminal - TUI for managing AI conversations with persistent memory and agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "greyok00", email = "greyok00@users.noreply.github.com" }
]
keywords = ["ai", "tui", "terminal", "ollama", "llm", "chat", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/greyok00/cortexllm"
Repository = "https://github.com/greyok00/cortexllm.git"
Issues = "https://github.com/greyok00/cortexllm/issues"

[tool.setuptools.packages.find]
include = ["cortexllm*"]
